--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>Test Angular 2</title>
-    <script src="../../node_modules/systemjs/dist/system.src.js"></script>
-    <script src="../../node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="https://github.jspm.io/jmcriffey/bower-traceur-runtime@0.0.87/traceur-runtime.js"></script>
+    <script src="https://jspm.io/system@0.16.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-alpha.26/angular2.dev.js"></script>
     <script>
 		System.config({
 			packages: {'app': {defaultExtension: 'js'}}
